added a bunch of stuff. Format gallery correctly and delete borders

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+
+    <!-- Link your CSS stylesheet -->
+    <link rel="stylesheet" href="style\index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Hi, I'm Sebastian Espeset!</h1>
+
+      <nav class="navigation">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <section class="topsection">
+      <div class="name">
+        <h1>Sebastian Espeset</h1>
+        <a>Projects!</a>
+      </div>
+    </section>
+    <section class="bottomsection">
+      <div class="gallery">
+        <div><img src="https://picsum.photos/400/400">Title 1</img></div>
+        <div><img src="https://picsum.photos/400/400">Title 2</img></div>
+        <div><img src="https://picsum.photos/400/400">Title 3</img></div>
+        <div><img src="https://picsum.photos/400/400">Title 4</img></div>
+        <div><img src="https://picsum.photos/400/400">Title 5</img></div>
+        <div><img src="https://picsum.photos/400/400">Title 6</img></div>
+      </div>
+    </section><br><br>
+    <footer>
+      <div class="foot">
+        <a>Contact</a>
+      </div>
+    </footer>
+  </body>
 </html>
