last commit, not perfect, must sleep

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 
   <!-- Link your CSS stylesheet -->
+  <link href="https://fonts.googleapis.com/css2?family=Piazzolla:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style\index.css" />
 </head>
 
@@ -29,12 +30,16 @@
   </section>
   <section class="bottomsection">
     <div class="gallery">
-      <div><img src="https://picsum.photos/100/100"/><p>Title 1</p></div>
-      <div><img src="https://picsum.photos/100/100"/><p>Title 2</p></div>
-      <div><img src="https://picsum.photos/100/100"/><p>Title 3</p></div>
-      <div><img src="https://picsum.photos/100/100"/><p>Title 4</p></div>
-      <div><img src="https://picsum.photos/100/100"/><p>Title 5</p></div>
-      <div><img src="https://picsum.photos/100/100"/><p>Title 6</p></div>
+      <div><img src="https://picsum.photos/200/100"/><p>Title 1</p></div>
+      <div><img src="https://picsum.photos/200/100"/><p>Title 2</p></div>
+      <div><img src="https://picsum.photos/200/100"/><p>Title 3</p></div>
+
+    </div>
+    <div class="gallery">
+    
+      <div><img src="https://picsum.photos/200/100"/><p>Title 4</p></div>
+      <div><img src="https://picsum.photos/200/100"/><p>Title 5</p></div>
+      <div><img src="https://picsum.photos/200/100"/><p>Title 6</p></div>
     </div>
   </section><br><br>
   <footer>
